--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap");
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 :root {
   --gradient: radial-gradient(circle, #e5e5e5 0%, #fff 100%);
@@ -18,7 +16,7 @@ body {
 }
 
 section {
-  width: 100vw;
+  width: 100dvw;
 }
 
 @theme {
